@@ -2,6 +2,11 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Sun Jan  6 01:24:10 NOVT 2000
+max:
+* add token noProcessBundles
+
+----- cvs ci ------
 Sat Feb  5 02:36:03 NOVT 2000
 max:
 * bugfix for groups: allocation memory for \0 (patch from Serguei)
